# candle-turbocalm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PHASE2_TASKS.md  PHASE3_TASKS.md  PHASE4_TASKS.md  PHASE5_TASKS.md  PLAN-kv-fusion.md  PLAN-self-training-embeddings.md  README.md  REMEDIATION_SUMMARY.md  SPIKE-RESULTS.md  SPRINT3-PROMPT.md  SPRINT4-5-PROMPT.md  test_matmul.rs
crates/turbocalm-calibrate/: Cargo.toml
crates/turbocalm-calibrate/src/: cmaes.rs  dataset.rs  lib.rs  objective.rs  pareto.rs  profiles.rs  report.rs  search.rs
crates/turbocalm-checkpoint/: Cargo.toml
crates/turbocalm-checkpoint/src/: convert.rs  download.rs  lib.rs  manifest.rs  parser.rs  remapping.rs  verification.rs
crates/turbocalm-cli/: Cargo.toml
crates/turbocalm-cli/src/: main.rs
crates/turbocalm-cli/tests/: smoke_test.rs
crates/turbocalm-core/: Cargo.toml
crates/turbocalm-core/src/: config.rs  device.rs  error.rs  hub.rs  lib.rs  metrics.rs  quant.rs  tokenizer.rs
crates/turbocalm-core/tests/: integration_tests.rs
crates/turbocalm-kv/: Cargo.toml
crates/turbocalm-kv/src/: lib.rs
crates/turbocalm-kv/src/cache/: dense.rs  mod.rs
crates/turbocalm-kv/src/quant/: mod.rs  pack.rs  polar.rs  profile.rs  qjl.rs  rotation.rs
crates/turbocalm-kv/tests/: kv_fusion.rs
crates/turbocalm-models/: Cargo.toml
crates/turbocalm-models/src/: lib.rs
crates/turbocalm-models/src/calm/: autoencoder.rs  generation.rs  lm.rs  mod.rs
crates/turbocalm-train/: Cargo.toml
crates/turbocalm-train/src/: calibrate.rs  checkpoint.rs  corpus.rs  embedding.rs  eval.rs  lib.rs  loss.rs  main.rs  online.rs  pairs.rs  server.rs  spike.rs  trainer.rs
crates/turbocalm-train/tests/: sprint3_integration.rs  sprint45_integration.rs  training_infrastructure.rs
crates/turbocalm-triumvirate/: Cargo.toml
crates/turbocalm-triumvirate/src/: lib.rs
