[workspace]
resolver = "2"
members = [
    "crates/turbocalm-core",
    "crates/turbocalm-checkpoint",
    "crates/turbocalm-models",
    "crates/turbocalm-kv",
    "crates/turbocalm-calibrate",
    "crates/turbocalm-triumvirate",
    "crates/turbocalm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/caelator/candle-turbocalm"

[workspace.dependencies]
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.5"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
half = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
