[package]
name = "turbocalm-calibrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
tokenizers.workspace = true
rand.workspace = true
rand_distr.workspace = true
half.workspace = true
tracing.workspace = true
chrono = "0.4"
turbocalm-core = { path = "../turbocalm-core" }

# For testing
[dev-dependencies]
approx = "0.5"
tempfile = "3"
