[package]
name = "turbocalm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "turbocalm"
path = "src/main.rs"

[dependencies]
turbocalm-core = { path = "../turbocalm-core", features = ["metal"] }
turbocalm-checkpoint = { path = "../turbocalm-checkpoint" }
turbocalm-models = { path = "../turbocalm-models" }
turbocalm-kv = { path = "../turbocalm-kv" }
turbocalm-calibrate = { path = "../turbocalm-calibrate" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
tokenizers.workspace = true
serde_json.workspace = true
chrono.workspace = true
safetensors.workspace = true
half.workspace = true

[features]
default = []
metal = ["turbocalm-core/metal"]
