[package]
name = "turbocalm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core candle dependencies
candle-core.workspace = true
candle-nn.workspace = true

# Serialization and configuration
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Tokenizer and HF hub functionality
tokenizers.workspace = true
hf-hub.workspace = true

# Additional utilities
half.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
integration = []
metal = ["candle-core/metal"]

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
