[package]
name = "turbocalm-kv"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
safetensors.workspace = true
rand.workspace = true
turbocalm-core = { path = "../turbocalm-core" }
