[package]
name = "turbocalm-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
rand.workspace = true
turbocalm-core = { path = "../turbocalm-core" }
