[package]
name = "turbocalm-train"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1.11"
candle-core.workspace = true
candle-nn.workspace = true
chrono.workspace = true
clap.workspace = true
http = "1.4"
http-body-util = "0.1.3"
hyper = { version = "1.8", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
turbocalm-core = { path = "../turbocalm-core" }
turbocalm-models = { path = "../turbocalm-models" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
turbocalm-triumvirate = { path = "../turbocalm-triumvirate" }
